discussion/kv_engine/176433/176433_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Make RangeScan duration and buffering dynamic

Add "set" paths for changing the runtime value of:

* range_scan_read_buffer_send_size

This value is read from the config when a new scan is created, existing
scans do not pick-up the change.

* range_scan_max_lifetime

This value is push through by a change-listener to the range scan code.
New values take affect when the timeout task is scheduled.

These are deliberately not documented in cbepctl

Change-Id: I578ba6dd35fe6859667468473a53159445d9e167

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-08-16 12:37:31.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-16 13:01:55.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29813/ : ABORTED

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-16T13:01:07.243Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-16T13:01:07.243Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-16T13:01:07.243Z] (174 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29813/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29813/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19498/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:84:18: error: member access into incomplete type "const StatCollector" [clang-diagnostic-error]
        collector.addStat(std::string_view(key.data(), key.size()), statValue);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:19:7: note: forward declaration of "StatCollector"
class StatCollector;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19498/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:84:18:
error: member access into incomplete type "const StatCollector" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19498/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48398/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
..\kv_engine\engines\ep\tests\ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
(35 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48398/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40664/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:84:18:
error: member access into incomplete type "const StatCollector"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40664/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20692/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-16T12:53:12.266Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-16T12:53:12.266Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-16T12:53:12.266Z] (42 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20692/ )

Failure of GoogleTest "EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/persistent_magma_value_only":

<pre>
[ RUN      ] EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/persistent_magma_value_only
[2022-08-16T13:00:21.759Z] ../kv_engine/engines/ep/tests/module_tests/kv_bucket_test.cc:188: Failure
[2022-08-16T13:00:21.759Z] Expected: (0) != (expectedCount), actual: 0 vs 0
[2022-08-16T13:00:21.759Z] unexpected error:no memory for key:cid:0x0:diffKey
[2022-08-16T13:00:21.759Z] Google Test trace:
[2022-08-16T13:00:21.759Z] ../kv_engine/engines/ep/tests/module_tests/bucket_quota_change_test.cc:301: 
[2022-08-16T13:00:21.759Z] ../kv_engine/engines/ep/tests/module_tests/kv_bucket_test.cc:272: Failure
[2022-08-16T13:00:21.759Z] Expected equality of these values:
[2022-08-16T13:00:21.759Z]   expected
[2022-08-16T13:00:21.759Z]     Which is: 1
[2022-08-16T13:00:21.759Z]   actualFlushed
[2022-08-16T13:00:21.759Z]     Which is: 0
[2022-08-16T13:00:21.759Z] Unexpected items (0) in flush_vbucket_to_disk(vb:0, 1)
[2022-08-16T13:00:21.759Z] Google Test trace:
[2022-08-16T13:00:21.759Z] ../kv_engine/engines/ep/tests/module_tests/bucket_quota_change_test.cc:301: 
[2022-08-16T13:00:21.759Z] [  FAILED  ] EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/persistent_magma_value_only, where GetParam() = "bucket_type=persistent:backend=magma:item_eviction_policy=value_only" (59 ms)
EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/persistent_magma_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20692/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21435/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-16T12:47:33.995Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-16T12:47:33.995Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-16T12:47:33.995Z] (332 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21435/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21788/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-16T12:50:59.829Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-16T12:50:59.829Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-16T12:50:59.829Z] (30 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21788/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22510/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-16T12:50:08.831Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-16T12:50:08.831Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-16T12:50:08.831Z] (491 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22510/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9285/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-16T12:52:30.900Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-16T12:52:30.900Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-16T12:52:30.900Z] (16 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9285/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18710/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9188/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
